--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,2 +1,5 @@
 flask
-python-dotenv
+python-dotenv         # For loading environment variables from .env file
+flask-sqlalchemy      # For database integration
+flask-login           # For user authentication and session management
+werkzeug              # For password hashing (already included as a Flask dependency)
