Added contact info for Sophie on team.jsx, added flask-cors in requirements.tsx

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ python-dotenv         # For loading environment variables from .env file
 flask-sqlalchemy      # For database integration
 flask-login           # For user authentication and session management
 werkzeug              # For password hashing (already included as a Flask dependency)
+flask-cors
 
 tensorflow
 transformers
