Fixed user authentification; login now takes user to /home

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,9 @@ python-dotenv         # For loading environment variables from .env file
 flask-sqlalchemy      # For database integration
 flask-login           # For user authentication and session management
 werkzeug              # For password hashing (already included as a Flask dependency)
-flask-cors
+flask-cors            # for cross-origin resource sharing 
+flask-bcrypt          # for user authentication
+flask-session         # for server-side sessions/cookies
 
 tensorflow
 transformers
