--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://127.0.0.1:5000",
   "dependencies": {
+    "@radix-ui/react-toast": "^1.2.4",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "frontend": "file:",
