--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,13 +6,19 @@
   "dependencies": {
     "@radix-ui/react-toast": "^1.2.4",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cra-template": "1.2.0",
     "frontend": "file:",
+    "lucide-react": "^0.471.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "react-simple-typewriter": "^5.0.1",
     "tailwind": "^4.0.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
